fixing bug for IMDB link

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -30,8 +30,6 @@
             height: 100%;
         }
         .movie-tile {
-            margin-bottom: 20px;
-            padding-top: 20px;
         }
         .extended-tile {
             margin-bottom: 20px;
@@ -53,6 +51,9 @@
             left: 0;
             top: 0;
             background-color: white;
+        }
+        .imdb-link {
+            font-size: 70%
         }
     </style>
     <script type="text/javascript" charset="utf-8">
@@ -110,73 +111,67 @@
       
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="KYz2wyBy3kc" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: A story of a boy and his toys that come to life
+      <a class="textover" title="Storyline: A story of a boy and his toys that come to life
 ReleaseDate: November 22, 1995
 Ratings: 8.3/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="http://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="KYz2wyBy3kc" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt0114709">Toy Story</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt0114709" target="_blank"><h2>Toy Story</h2></a>
     </div>
 </div>
 
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="d1_JBMrrYw8" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: A marine on an alien planet
+      <a class="textover" title="Storyline: A marine on an alien planet
 ReleaseDate: December 18, 2009
 Ratings: 7.3/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="http://upload.wikimedia.org/wikipedia/id/b/b0/Avatar-Teaser-Poster.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="d1_JBMrrYw8" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt0499549">Avatar</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt0499549" target="_blank"><h2>Avatar</h2></a>
     </div>
 </div>
 
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="3PsUJFEBC74" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: Using rock music to learn
+      <a class="textover" title="Storyline: Using rock music to learn
 ReleaseDate: October 3, 2003
 Ratings: 7.1/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="http://upload.wikimedia.org/wikipedia/en/1/11/School_of_Rock_Poster.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="3PsUJFEBC74" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt0332379">School of Rock</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt0332379" target="_blank"><h2>School of Rock</h2></a>
     </div>
 </div>
 
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="c3sBBRxDAqk" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: Story of rat who aspires to become a cook
+      <a class="textover" title="Storyline: Story of rat who aspires to become a cook
 ReleaseDate: June 29, 2007
 Ratings: 8/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="https://upload.wikimedia.org/wikipedia/en/5/50/RatatouillePoster.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="c3sBBRxDAqk" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt0382932">Ratatouille</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt0382932" target="_blank"><h2>Ratatouille</h2></a>
     </div>
 </div>
 
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="FAfR8omt-CY" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: A story of a nostalgic writer who goes back to 1920 every midnight in paris
+      <a class="textover" title="Storyline: A story of a nostalgic writer who goes back to 1920 every midnight in paris
 ReleaseDate: May 20, 2011
 Ratings: 7.7/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="http://upload.wikimedia.org/wikipedia/en/9/9f/Midnight_in_Paris_Poster.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="FAfR8omt-CY" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt1605783">Midnight in Paris</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt1605783" target="_blank"><h2>Midnight in Paris</h2></a>
     </div>
 </div>
 
 <div class="col-md-6 col-lg-4 extended-title text-center">
     <div class="movie-tile" data-trailer-youtube-id="PbA63a7H0bo" data-toggle="modal" data-target="#trailer">
-        <a class="textover" title="Storyline: A really real reality show
+      <a class="textover" title="Storyline: A really real reality show
 ReleaseDate: March 12, 2012
 Ratings: 7.3/10 IMDb ratings" style="background-color:#FFFFFF;color:#000000"><img src="http://upload.wikimedia.org/wikipedia/en/4/42/HungerGamesPoster.jpg" width="220" height="342"></a>
-        <a href= " " data-trailer-youtube-id="PbA63a7H0bo" data-toggle="modal" data-target="#trailer"></a>
     </div>
-    <div class=imdb>
-        <h2><a herf="http://www.imdb.com/title/tt1392170/">Hunger Games</a></h2>
+    <div class="imdb-link">
+      <a href="http://www.imdb.com/title/tt1392170/" target="_blank"><h2>Hunger Games</h2></a>
     </div>
 </div>
 
